Implement SimpleCounterTaskProcessor