@@ -4,7 +4,6 @@ import com.celonis.challenge.model.ProjectGenerationTask;
 import com.celonis.challenge.model.SimpleCounterTask;
 import com.celonis.challenge.model.Task;
 import com.celonis.challenge.model.TaskType;
-import com.celonis.challenge.model.repo.ProjectGenerationTaskRepository;
 import org.hamcrest.MatcherAssert;
 import org.hamcrest.Matchers;
 import org.junit.jupiter.api.BeforeEach;
@@ -14,13 +13,14 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.web.client.TestRestTemplate;
 import org.springframework.http.*;
+import org.springframework.http.converter.StringHttpMessageConverter;
 import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 
-import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.notNullValue;
+import static com.celonis.challenge.model.TaskStatus.NEW;
+import static org.hamcrest.Matchers.*;
 
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 class TaskControllerTest {
@@ -32,16 +32,13 @@ class TaskControllerTest {
     private final String HEADER_VALUE = "totally_secret";
 
     @Autowired
-    private ProjectGenerationTaskRepository projectGenerationTaskRepository;
-
-    @Autowired
     private TestRestTemplate restTemplate;
 
     @BeforeEach
     void setUp() {
         restTemplate
                 .getRestTemplate()
-                .setMessageConverters(Collections.singletonList(new MappingJackson2HttpMessageConverter()));
+                .setMessageConverters(List.of(new MappingJackson2HttpMessageConverter(), new StringHttpMessageConverter()));
     }
 
     // TODO add test cases for wrong scenarios, for example, delete or get not existing tasks
@@ -58,6 +55,7 @@ class TaskControllerTest {
         MatcherAssert.assertThat(response.getBody(), Matchers.notNullValue());
         MatcherAssert.assertThat(response.getBody().getName(), equalTo("test task"));
         MatcherAssert.assertThat(response.getBody().getCreationDate(), notNullValue());
+        MatcherAssert.assertThat(response.getBody().getStatus(), equalTo(NEW));
     }
 
     @Test
@@ -74,6 +72,7 @@ class TaskControllerTest {
         MatcherAssert.assertThat(response.getBody().getName(), equalTo("test task"));
         MatcherAssert.assertThat(response.getBody().getX(), equalTo(10));
         MatcherAssert.assertThat(response.getBody().getY(), equalTo(20));
+        MatcherAssert.assertThat(response.getBody().getStatus(), equalTo(NEW));
     }
 
     @Test
@@ -88,7 +87,7 @@ class TaskControllerTest {
         headers.set(HEADER_NAME, HEADER_VALUE);
 
         // when
-        ResponseEntity<ProjectGenerationTask> response =  restTemplate.exchange(
+        ResponseEntity<ProjectGenerationTask> response = restTemplate.exchange(
                 localhostBaseUrl + savedTaskId, HttpMethod.GET, new HttpEntity<>(headers),
                 ProjectGenerationTask.class);
 
@@ -96,6 +95,7 @@ class TaskControllerTest {
         MatcherAssert.assertThat(response.getStatusCode(), equalTo(HttpStatus.OK));
         MatcherAssert.assertThat(response.getBody(), Matchers.notNullValue());
         MatcherAssert.assertThat(response.getBody().getId(), equalTo(savedTaskId));
+        MatcherAssert.assertThat(response.getBody().getStatus(), equalTo(NEW));
     }
 
     @Test
@@ -115,12 +115,13 @@ class TaskControllerTest {
         this.restTemplate.put(localhostBaseUrl + savedTaskId, request);
 
         // then
-        ResponseEntity<ProjectGenerationTask> response =  restTemplate.exchange(
+        ResponseEntity<ProjectGenerationTask> response = restTemplate.exchange(
                 localhostBaseUrl + savedTaskId, HttpMethod.GET, new HttpEntity<>(headers),
                 ProjectGenerationTask.class);
         MatcherAssert.assertThat(response.getStatusCode(), equalTo(HttpStatus.OK));
         MatcherAssert.assertThat(response.getBody(), Matchers.notNullValue());
         MatcherAssert.assertThat(response.getBody().getName(), equalTo("Updated name"));
+        MatcherAssert.assertThat(response.getBody().getStatus(), equalTo(NEW));
     }
 
     @Test
@@ -139,10 +140,96 @@ class TaskControllerTest {
                 localhostBaseUrl + savedTaskId, HttpMethod.DELETE, new HttpEntity<>(headers), ProjectGenerationTask.class);
 
         // then
-        ResponseEntity<Void> response =  restTemplate.exchange(
+        ResponseEntity<Void> response = restTemplate.exchange(
                 localhostBaseUrl + savedTaskId, HttpMethod.GET, new HttpEntity<>(headers),
                 Void.class);
         MatcherAssert.assertThat(response.getStatusCode(), equalTo(HttpStatus.NOT_FOUND));
+    }
+
+    @Test
+    public void shouldExecuteProjectGenerationTask() {
+        // given
+        ProjectGenerationTask task = new ProjectGenerationTask();
+        task.setName("test task");
+        task.setType(TaskType.PROJECT_GENERATION);
+        String savedTaskId = Objects.requireNonNull(createTask(task, ProjectGenerationTask.class).getBody()).getId();
+
+        HttpHeaders headers = new HttpHeaders();
+        headers.set(HEADER_NAME, HEADER_VALUE);
+
+        // when
+        ResponseEntity<Void> response = restTemplate.exchange(
+                localhostBaseUrl + savedTaskId + "/execute", HttpMethod.POST, new HttpEntity<>(headers),
+                Void.class);
+
+        // then
+        MatcherAssert.assertThat(response.getStatusCode(), equalTo(HttpStatus.NO_CONTENT));
+    }
+
+    @Test
+    public void shouldGetResultOfProjectGenerationTask() {
+        // given
+        ProjectGenerationTask task = new ProjectGenerationTask();
+        task.setName("test task");
+        task.setType(TaskType.PROJECT_GENERATION);
+        String savedTaskId = Objects.requireNonNull(createTask(task, ProjectGenerationTask.class).getBody()).getId();
+
+        HttpHeaders headers = new HttpHeaders();
+        headers.set(HEADER_NAME, HEADER_VALUE);
+        restTemplate.exchange(
+                localhostBaseUrl + savedTaskId + "/execute", HttpMethod.POST, new HttpEntity<>(headers),
+                Void.class);
+
+        // when
+        ResponseEntity<String> response = restTemplate.exchange(
+                localhostBaseUrl + savedTaskId + "/result", HttpMethod.GET, new HttpEntity<>(headers),
+                String.class);
+
+        // then
+        MatcherAssert.assertThat(response.getStatusCode(), equalTo(HttpStatus.OK));
+        MatcherAssert.assertThat(response.getBody(), Matchers.notNullValue());
+        MatcherAssert.assertThat(response.getBody(), equalTo("Hello World!"));
+    }
+
+    @Test
+    public void shouldExecuteAndGetResultOfSimpleCounterTask() throws InterruptedException {
+        // given
+        SimpleCounterTask task = new SimpleCounterTask();
+        task.setName("test task");
+        task.setType(TaskType.SIMPLE_COUNTER);
+        task.setX(10);
+        task.setY(12);
+        String savedTaskId = Objects.requireNonNull(createTask(task, SimpleCounterTask.class).getBody()).getId();
+
+        HttpHeaders headers = new HttpHeaders();
+        headers.set(HEADER_NAME, HEADER_VALUE);
+        restTemplate.exchange(
+                localhostBaseUrl + savedTaskId + "/execute", HttpMethod.POST, new HttpEntity<>(headers),
+                Void.class);
+
+        // when
+        ResponseEntity<String> firstResponse = restTemplate.exchange(
+                localhostBaseUrl + savedTaskId + "/result", HttpMethod.GET, new HttpEntity<>(headers),
+                String.class);
+
+        // then
+        MatcherAssert.assertThat(firstResponse.getStatusCode(), equalTo(HttpStatus.OK));
+        MatcherAssert.assertThat(firstResponse.getBody(), Matchers.notNullValue());
+        MatcherAssert.assertThat(firstResponse.getBody(), Matchers.containsString("Progress:"));
+        MatcherAssert.assertThat(firstResponse.getBody(), Matchers.containsString("Status: IN_PROGRESS"));
+
+        // when
+        Thread.sleep(3500);
+        ResponseEntity<String> secondResponse = restTemplate.exchange(
+                localhostBaseUrl + savedTaskId + "/result", HttpMethod.GET, new HttpEntity<>(headers),
+                String.class);
+
+        // then
+        MatcherAssert.assertThat(secondResponse.getStatusCode(), equalTo(HttpStatus.OK));
+        MatcherAssert.assertThat(secondResponse.getBody(), Matchers.notNullValue());
+        MatcherAssert.assertThat(secondResponse.getBody(), Matchers.containsString("Progress: 12"));
+        MatcherAssert.assertThat(secondResponse.getBody(), Matchers.containsString("Status: COMPLETED"));
+
     }
 
     private <T extends Task> ResponseEntity<T> createTask(T task, Class<T> taskType) {
